--- a/index.html
+++ b/index.html
@@ -1536,67 +1536,47 @@
                         <div class="container" style="position: relative; z-index: 1;">
                            <ul class="new-category-design-ul need-arrows" data-slick=""
                               data-option="slidesToShow: 7,slidesToScroll: 1,autoplay: true,autoplaySpeed: 2000,speed: 500,arrows: true,dots: false,responsive: [{breakpoint: 767,settings: {arrows: true, dots: false, slidesToShow: 3}},]">
-                              <li><a href="#" title=" Iftar Combo">
+                              <li><a href="#" title=" Chicken Biriyani">
                                     <div class="new-category-imgdv"><img src="./assets/wla_new/img/chicken_biryani_1.webp"
                                           alt=" Iftar Combo" width="200" height="200"></div>
                                     <h4 class="mb-0 custom-color"> Chicken Biriyani</h4>
                                  </a></li>
-                              <li><a href="#" title="Value Biryani Bowl">
+                              <li><a href="#" title="Veg Biriyani">
                                     <div class="new-category-imgdv"><img src="./assets/wla_new/img/veg_biryani_1.jpg"
                                           alt="Value Biryani Bowl" width="200" height="200"></div>
                                     <h4 class="mb-0 custom-color">Veg Biryani</h4>
                                  </a></li>
-                              <li><a href="#" title="Biryani Sampler">
-                                    <div class="new-category-imgdv"><img src="./assets/wla_new/img/chicken_meal.jpg"
-                                          alt="Biryani Sampler" width="200" height="200"></div>
-                                    <h4 class="mb-0 custom-color">Chicken Meal</h4>
-                                 </a></li>
-                              <li><a href="#" title="Hyderabadi Biryani">
-                                    <div class="new-category-imgdv"><img src="./assets/wla_new/img/veg_biryani_1.jpg"
-                                          alt="Hyderabadi Biryani" width="200" height="200"></div>
-                                    <h4 class="mb-0 custom-color">Veg Meal</h4>
-                                 </a></li>
-                              <li><a href="#" title="Andhra Biryani">
-                                    <div class="new-category-imgdv"><img src="./assets/wla_new/img/kolkata_chicken_10.jpeg"
-                                          alt="Andhra Biryani" width="200" height="200"></div>
-                                    <h4 class="mb-0 custom-color">Kolkata Chicken</h4>
-                                 </a></li>
-                              <li><a href="#" title="Lucknowi Biryani">
-                                    <div class="new-category-imgdv"><img src="./assets/wla_new/img/veg_biryani_1.jpg"
-                                          alt="Lucknowi Biryani" width="200" height="200"></div>
-                                    <h4 class="mb-0 custom-color">Kolkata Veg</h4>
-                                 </a></li>
-                              <li><a href="#" title="Kolkata Biryani">
+                              <li><a href="#" title="Veg Galouti Kabab">
                                     <div class="new-category-imgdv"><img src="./assets/wla_new/img/veg_galouti.jpeg"
                                           alt="Kolkata Biryani" width="200" height="200"></div>
                                     <h4 class="mb-0 custom-color">Veg Galouti Kabab</h4>
                                  </a></li>
-                              <li><a href="#" title="Handi Biryani">
+                              <li><a href="#" title="Paneer Tikka">
                                     <div class="new-category-imgdv"><img src="./assets/wla_new/img/paneer_tikka.webp"
                                           alt="Handi Biryani" width="200" height="200"></div>
                                     <h4 class="mb-0 custom-color">Paneer Tikka</h4>
                                  </a></li>
-                              <li><a href="#" title="Family Pack (3200ml)">
+                              <li><a href="#" title="Chicken Tikka">
                                     <div class="new-category-imgdv"><img src="./assets/wla_new/img/chicken_tikka.jpg"
                                           alt="Family Pack (3200ml)" width="200" height="200"></div>
                                     <h4 class="mb-0 custom-color">Chicken Tikka</h4>
                                  </a></li>
-                              <li><a href="#" title="Starters">
+                              <li><a href="#" title="Gulab Jamun">
                                     <div class="new-category-imgdv"><img src="./assets/wla_new/img/gulab_jamun.jpg" alt="Starters"
                                           width="200" height="200"></div>
                                     <h4 class="mb-0 custom-color">Gulab Jamun</h4>
                                  </a></li>
-                              <li><a href="#" title="Main Course">
+                              <li><a href="#" title="Rayta">
                                     <div class="new-category-imgdv"><img src="./assets/wla_new/img/rayta.jpg"
                                           alt="Main Course" width="200" height="200"></div>
                                     <h4 class="mb-0 custom-color">Rayta</h4>
                                  </a></li>
-                              <li><a href="#" title="Roti & Rice">
+                              <li><a href="#" title="Green Salad">
                                     <div class="new-category-imgdv"><img src="./assets/wla_new/img/green_salad.jpg"
                                           alt="Roti & Rice" width="200" height="200"></div>
                                     <h4 class="mb-0 custom-color">Green Salad</h4>
                                  </a></li>
-                              <li><a href="#" title="Desserts">
+                              <li><a href="#" title="Lime Soda">
                                     <div class="new-category-imgdv"><img src="./assets/wla_new/img/fresh_lime_soda.jpg" alt="Desserts"
                                           width="200" height="200"></div>
                                     <h4 class="mb-0 custom-color">Lime Soda</h4>
@@ -1653,8 +1633,8 @@
              { name: "Veg Dum Biryani (1 Person)", price: 130, image: "veg_biryani_1.jpg" },
              { name: "Chicken Dum Biryani (2 Person, 2 Pis Chicken, 2 Pis Aloo, 2 Pis Egg)", price: 200, image: "chicken_biryani_2.jpg" },
              { name: "Veg Dum Biryani (2 Person)", price: 180, image: "veg_biryani_1.jpg" },
-             { name: "Chicken Dum Biryani with Chicken Chaap (Combo, 1 Person, 1 Pis Chaap)", price: 390, image: "chicken_biryani_2.jpg" },
-             { name: "Veg Dum Biryani with Paneer Chaap (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 390, image: "veg_biryani_1.jpg" },
+             { name: "Chicken Dum Biryani with Chicken Chaap (Combo, 1 Person, 1 Pis Chaap)", price: 180, image: "chicken_biryani_2.jpg" },
+             { name: "Veg Dum Biryani with Paneer Chaap (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 180, image: "veg_biryani_1.jpg" },
              { name: "Chicken Biryani with Chicken Chaap & Fresh Lime Soda (Combo, 1 Person, 1 Pis Chaap)", price: 200, image: "chicken_meal.jpg" },
              { name: "Veg Dum Biryani with Paneer Chaap & Fresh Lime Soda (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 200, image: "veg_biryani_1.jpg" }
          ];
@@ -1975,7 +1955,7 @@
 
                      <h6>Address</h6>
 
-                     <p class="mb-0 text-white pt-3">SRABONI BLOCK-236, Kshudiram Nagar, Haldia, West Bengal 721657</p>
+                     <p class="mb-0 text-white pt-3">Haldia, West Bengal, India</p>
 
                   </div>
                   <div class="col-md-3 col-12 pl-2 pl-md-3 pr-2 pr-md-3 mt-3 mt-md-0">
@@ -2007,7 +1987,7 @@
                                  <g></g>
                                  <g></g>
                                  <g></g>
-                              </svg> +91 9475 863 170</a>
+                              </svg> +91 7319 423 205</a>
                         </li>
                         <!-- email -->
                         <li style="margin-top: 20px;">
