--- a/about.html
+++ b/about.html
@@ -1734,7 +1734,7 @@
 
                      <h6>Address</h6>
 
-                     <p class="mb-0 text-white pt-3">SRABONI BLOCK-236, Kshudiram Nagar, Haldia, West Bengal 721657</p>
+                     <p class="mb-0 text-white pt-3">Haldia, West Bengal, India</p>
 
                   </div>
                   <div class="col-md-3 col-12 pl-2 pl-md-3 pr-2 pr-md-3 mt-3 mt-md-0">
@@ -1766,7 +1766,7 @@
                                  <g></g>
                                  <g></g>
                                  <g></g>
-                              </svg> +91 9475 863 170</a>
+                              </svg> +91 7319 423 205</a>
                         </li>
 
                         <!-- email -->
