Update dishes.html -

--- a/dishes.html
+++ b/dishes.html
@@ -26,7 +26,7 @@
     <link rel="icon" sizes="192x192" href="./images/biriyani-feast-logo.jpg">
     <link rel="apple-touch-icon" sizes="192x192" href="./images/biriyani-feast-logo.jpg">
     <link rel="shortcut icon" href="./images/biriyani-feast-logo.jpg" type="image/x-icon">
-    <title>Biriyani Feast - Dishes</title>
+    <title>Biriyani Feast - Online Ordering</title>
     <meta name="description" content="Order Online from Your Favorite Biriyani Feast  - Powered By Uengage">
     <link rel="canonical" href="./">
     <link rel="manifest" href="/manifest.json">
@@ -869,8 +869,8 @@
                     { name: "Veg Dum Biryani (1 Person)", price: 130, image: "veg_biryani_1.jpg" },
                     { name: "Chicken Dum Biryani (2 Person, 2 Pis Chicken, 2 Pis Aloo, 2 Pis Egg)", price: 200, image: "chicken_biryani_2.jpg" },
                     { name: "Veg Dum Biryani (2 Person)", price: 180, image: "veg_biryani_1.jpg" },
-                    { name: "Chicken Dum Biryani with Chicken Chaap (Combo, 1 Person, 1 Pis Chaap)", price: 390, image: "chicken_biryani_2.jpg" },
-                    { name: "Veg Dum Biryani with Paneer Chaap (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 390, image: "veg_biryani_1.jpg" },
+                    { name: "Chicken Dum Biryani with Chicken Chaap (Combo, 1 Person, 1 Pis Chaap)", price: 180, image: "chicken_biryani_2.jpg" },
+                    { name: "Veg Dum Biryani with Paneer Chaap (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 180, image: "veg_biryani_1.jpg" },
                     { name: "Chicken Biryani with Chicken Chaap & Fresh Lime Soda (Combo, 1 Person, 1 Pis Chaap)", price: 200, image: "chicken_meal.jpg" },
                     { name: "Veg Dum Biryani with Paneer Chaap & Fresh Lime Soda (Combo, 1 Person, 1 Pis Paneer Chaap)", price: 200, image: "veg_biryani_1.jpg" },
                     { name: "Kolkata Chicken Dum Biryani (5 Person, 5 Pis Chicken, 5 Pis Aloo, 5 Pis Egg)", price: 600, image: "kolkata_chicken_5.jpeg" },
@@ -1142,8 +1142,7 @@
 
                                 <h6>Address</h6>
 
-                                <p class="mb-0 text-white pt-3">SRABONI BLOCK-236, Kshudiram Nagar, Haldia, West Bengal
-                                    721657</p>
+                                <p class="mb-0 text-white pt-3">Haldia, West Bengal, India</p>
 
                             </div>
                             <div class="col-md-3 col-12 pl-2 pl-md-3 pr-2 pr-md-3 mt-3 mt-md-0">
@@ -1177,7 +1176,7 @@
                                                 <g></g>
                                                 <g></g>
                                                 <g></g>
-                                            </svg> +91 9475 863 170</a>
+                                            </svg> +91 7319 423 205</a>
                                     </li>
                                     <!-- email -->
                                     <li style="margin-top: 20px;">
